--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
   </head>
   <body>
     <div class="switch">
-      <div class="cuerpo">
-        <div class="cruceta"></div>
-        <div class="cruceta1"></div>
-        <div class="cruceta2"></div>
+      <div class="mandoIzq">
+        <div>
+          <div class="joystick"></div>
+        </div>
+        <div class="cajaCruceta">
+          <div class="cruceta"></div>
+          <div class="cruceta1"></div>
+          <div class="cruceta2"></div>
+        </div>
       </div>
-      <div class="elements">
+      <div class="pantalla">
         <span class="gif"></span>
       </div>
 
-      <div class="cuerpo2">
+      <div class="MandoDer">
         <div>
           <div class="boton">Y</div>
         </div>
@@ -29,12 +34,11 @@
         </div>
         <div>
           <div class="boton">A</div>
-
         </div>
-        <!-- <div class="botonx">X</div>
-        <div class="botona">A</div>
-        <div class="botonb">B</div>
-        <div class="botony">Y</div> -->
+        <div>
+          <div class="joystick"></div>
+        </div>
+        
       </div>
     </div>
   </body>
