--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
       </div>
 
       <div class="MandoDer">
-        <div>
+        <div class="cajaCruceta">
           <div class="boton">Y</div>
-        </div>
-        <div id="centrobotones">
-          <div class="boton">X</div>
-          <div class="boton">B</div>
-        </div>
-        <div>
+          <div id="centrobotones">
+            <div class="boton">X</div>
+            <div class="boton">B</div>
+          </div>
+  
           <div class="boton">A</div>
+
         </div>
+
         <div>
           <div class="joystick"></div>
         </div>
-        
       </div>
     </div>
   </body>
